large screen alignment fix

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -3440,6 +3440,9 @@ md-card.preview-conversation-skin-supplemental-card {
 .oppia-splash-section-two {
   background-color: #f2f2ee;
   color: #2c4841;
+  max-width: 1800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .oppia-splash-button {
